--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -858,8 +858,8 @@ systema.tvinn.sad.manifest.express.cargolines.error.rule.transit.certified.inval
 #general
 systema.tvinn.sad.digitoll.disabled.button=Skrivebeskyttet
 
-systema.tvinn.sad.digitoll.list.tab.master=Tur - Master
-systema.tvinn.sad.digitoll.list.tab.house=Opd - House
+systema.tvinn.sad.digitoll.list.tab.master=Master
+systema.tvinn.sad.digitoll.list.tab.house=House
 systema.tvinn.sad.digitoll.list.tab.goodsItem=Linjer
 #Transport validator
 systema.tvinn.sad.digitoll.transport.error.rule.required.ScheduleDates=Hvis IATA-nummeret er spesifisert, er STA-feltene obligatoriske (Schedule-time). For fly er dette rutetid for ankomst (tilsvarer SIBT hos Avinor) og brukes til å identifisere transportmiddelet.
