--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -865,7 +865,7 @@ systema.tvinn.sad.digitoll.list.tab.goodsItem=Linjer
 systema.tvinn.sad.digitoll.transport.error.rule.required.ScheduleDates=Hvis IATA-nummeret er spesifisert, er STA-feltene obligatoriske (Schedule-time). For fly er dette rutetid for ankomst (tilsvarer SIBT hos Avinor) og brukes til å identifisere transportmiddelet.
 systema.tvinn.sad.digitoll.transport.error.rule.invalid.length.tollsted=Pass.tollsted er ugyldig. (Check length...)
 #House validator
-systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering (dersom det er en LRN)
+systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig for valgt prosedyre. Sjekk prosedyren. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering (dersom det er en LRN)
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.deklDateSekv=Prosedyr TRANSIT kan ikke inneholde Deklarantnr./Dato/Sekvensnr.
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.mrn=Prosedyr IMMEDIATE kan ikke inneholde MRN/LRN
 
