--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -861,6 +861,12 @@ systema.tvinn.sad.digitoll.disabled.button=Skrivebeskyttet
 systema.tvinn.sad.digitoll.list.tab.master=Master
 systema.tvinn.sad.digitoll.list.tab.house=House
 systema.tvinn.sad.digitoll.list.tab.goodsItem=Linjer
+systema.tvinn.sad.digitoll.list.column.sysped.status=Sysp. st
+systema.tvinn.sad.digitoll.list.column.api.status=Api st
+systema.tvinn.sad.digitoll.list.column.api=Api
+systema.tvinn.sad.digitoll.list.column.api.mrn=MRN Api
+systema.tvinn.sad.digitoll.list.column.api.request=Req.id Api
+
 #Transport validator
 systema.tvinn.sad.digitoll.transport.error.rule.required.ScheduleDates=Hvis IATA-nummeret er spesifisert, er STA-feltene obligatoriske (Schedule-time). For fly er dette rutetid for ankomst (tilsvarer SIBT hos Avinor) og brukes til å identifisere transportmiddelet.
 systema.tvinn.sad.digitoll.transport.error.rule.invalid.length.tollsted=Pass.tollsted er ugyldig. (Check length...)
