--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -870,8 +870,22 @@ systema.tvinn.sad.digitoll.list.column.api.request=Req.id Api
 #Transport validator
 systema.tvinn.sad.digitoll.transport.error.rule.required.ScheduleDates=Hvis IATA-nummeret er spesifisert, er STA-feltene obligatoriske (Schedule-time). For fly er dette rutetid for ankomst (tilsvarer SIBT hos Avinor) og brukes til å identifisere transportmiddelet.
 systema.tvinn.sad.digitoll.transport.error.rule.invalid.length.tollsted=Pass.tollsted er ugyldig. (Check length...)
+systema.tvinn.sad.digitoll.transport.error.rule.required.ombud.emailOrTelephone=Representant e-post eller telefon er obligatorisk
+systema.tvinn.sad.digitoll.transport.error.rule.invalid.email.ombud=Representant-epost er ikke gyldig
+systema.tvinn.sad.digitoll.transport.error.rule.invalid.email.carrier=Transportør-epost er ikke gyldig
+systema.tvinn.sad.digitoll.transport.error.rule.invalid.email.driver=Fører-epost er ikke gyldig
+
+#Master validator
+systema.tvinn.sad.digitoll.master.error.rule.invalid.email1.ombud=Representant-epost-1 er ikke gyldig
+systema.tvinn.sad.digitoll.master.error.rule.invalid.email2.ombud=Representant-epost-2 er ikke gyldig
+systema.tvinn.sad.digitoll.master.error.rule.invalid.email3.ombud=Representant-epost-3 er ikke gyldig
+systema.tvinn.sad.digitoll.master.error.rule.invalid.email.sender=Avsender-epost er ikke gyldig
+systema.tvinn.sad.digitoll.master.error.rule.invalid.email.receiver=Mottaker-epost er ikke gyldig
+
 #House validator
 systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig for valgt prosedyre. Sjekk prosedyren. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering (dersom det er en LRN)
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.deklDateSekv=Prosedyr TRANSIT kan ikke inneholde Deklarantnr./Dato/Sekvensnr.
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.mrn=Prosedyr IMMEDIATE kan ikke inneholde MRN/LRN
+systema.tvinn.sad.digitoll.house.error.rule.invalid.email.sender=Avsender-epost er ikke gyldig
+systema.tvinn.sad.digitoll.house.error.rule.invalid.email.receiver=Mottaker-epost er ikke gyldig
 
