--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -835,7 +835,7 @@ systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyld
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTime=ETA tid er ugyldig. HHmm
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeRegEx=ETA tid er ugyldig.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDateForward=ETA må være frem i tid
-systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Minst 2-timmer frem (idag)
+systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaTimeForward=ETA tid er ugyldig. Må være frem i tid
 
 systema.tvinn.sad.manifest.express.header.error.rule.invalidStaDate=STA er ugyldig
 systema.tvinn.sad.manifest.express.header.error.rule.invalidStaTime=STA tid er ugyldig. HHmm
