--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -817,6 +817,7 @@ systema.tvinn.sad.admin.transport.list.error.null.avdOrSign=Avdeling eller signa
 systema.tvinn.sad.manifest.disabled.button=Skrivebeskyttet
 
 systema.tvinn.sad.manifest.list.tab=Manifester
+systema.tvinn.sad.manifest.list.search.label.lnr=Lnr.
 systema.tvinn.sad.manifest.list.search.label.avd=Avd.
 systema.tvinn.sad.manifest.list.search.label.arende=Oppdrag
 systema.tvinn.sad.manifest.list.search.label.turnr=Turnr
@@ -829,6 +830,18 @@ systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
 systema.tvinn.sad.manifest.created.header.tab=Transport
 systema.tvinn.sad.manifest.createnew.last.tab=Last
 systema.tvinn.sad.manifest.created.header.logging.tab=EDI-logg
+#komplement till Excel
+systema.tvinn.sad.manifest.list.search.label.status=Status
+systema.tvinn.sad.manifest.list.search.label.eta=Eta
+systema.tvinn.sad.manifest.list.search.label.tollsted=Tollsted
+systema.tvinn.sad.manifest.list.search.label.bilnrFlynr=Bilnr-Nr
+systema.tvinn.sad.manifest.list.search.label.transportLand=Transp.land
+systema.tvinn.sad.manifest.list.search.label.transportNamn=Transp.navn
+systema.tvinn.sad.manifest.list.search.label.driver=Fører-navn
+systema.tvinn.sad.manifest.list.search.label.regDato=Reg.dato
+systema.tvinn.sad.manifest.list.search.label.mrn=Mrn.api
+systema.tvinn.sad.manifest.list.search.label.statusApi=Api.st
+
 #Manifest header
 systema.tvinn.sad.manifest.express.header.error.null.orgnr=Org.nr er obligatorisk. Sjekk SADEFDEF - Avd.vedlikehold ekspressfortolling.
 systema.tvinn.sad.manifest.express.header.error.rule.invalidEtaDate=ETA er ugyldig
