--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -114,6 +114,7 @@ systema.tvinn.sad.import.list.search.label.avd=Avd.
 systema.tvinn.sad.import.list.search.label.arende=Tolldeknr.
 systema.tvinn.sad.import.list.search.label.lopenr=Løpenr.
 systema.tvinn.sad.import.list.search.label.ekspnr=Ekspnr.
+systema.tvinn.sad.import.list.search.label.transpId=Transp.id
 systema.tvinn.sad.import.list.search.label.extrefnr=Ext.ref.nr.
 systema.tvinn.sad.import.list.search.label.aart=Type
 systema.tvinn.sad.import.list.search.label.signatur=Tar
@@ -132,11 +133,19 @@ systema.tvinn.sad.import.list.search.label.r31=R31
 systema.tvinn.sad.import.list.search.label.eta=ETA
 systema.tvinn.sad.import.list.search.label.notisblock=Not.blokk
 systema.tvinn.sad.import.list.search.label.email=Ep
+systema.tvinn.sad.import.list.search.label.email=Ep
+
 
 systema.tvinn.sad.import.list.search.label.omber.omber=Omber
 systema.tvinn.sad.import.list.search.label.omber.status=St.
 systema.tvinn.sad.import.list.search.label.omber.datum=Dato
 systema.tvinn.sad.import.list.search.label.omber.lopenr=Løpenr
+
+systema.tvinn.sad.import.list.search.label.digitoll.lnrt=Lnr.
+systema.tvinn.sad.import.list.search.label.digitoll.masterDocNr=M.Doc.nr
+systema.tvinn.sad.import.list.search.label.digitoll.houseTur=H.Tur
+systema.tvinn.sad.import.list.search.label.digitoll.houseOpd=H.Opd
+systema.tvinn.sad.import.list.search.label.digitoll.bilnr=Kjøretøy kj.merke
 
 
 #systema.tvinn.sad.import.list.search.label.begaranOmKlarering=Klarera
