--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -146,6 +146,7 @@ systema.tvinn.sad.import.list.search.label.digitoll.masterDocNr=M.Doc.nr
 systema.tvinn.sad.import.list.search.label.digitoll.houseTur=H.Tur
 systema.tvinn.sad.import.list.search.label.digitoll.houseOpd=H.Opd
 systema.tvinn.sad.import.list.search.label.digitoll.bilnr=Kjøretøy kj.merke
+systema.tvinn.sad.import.list.search.label.digitoll.eta=ETA
 
 
 #systema.tvinn.sad.import.list.search.label.begaranOmKlarering=Klarera
@@ -829,6 +830,7 @@ systema.tvinn.sad.manifest.list.tab=Manifester
 systema.tvinn.sad.manifest.list.search.label.lnr=Lnr.
 systema.tvinn.sad.manifest.list.search.label.avd=Avd.
 systema.tvinn.sad.manifest.list.search.label.arende=Oppdrag
+systema.tvinn.sad.manifest.list.search.label.lnr=Lnr
 systema.tvinn.sad.manifest.list.search.label.turnr=Turnr
 systema.tvinn.sad.manifest.list.search.label.signatur=Signatur
 systema.tvinn.sad.manifest.list.search.label.datum=Dato
@@ -836,6 +838,7 @@ systema.tvinn.sad.manifest.list.search.label.etafdatum=Fra ETA dato
 systema.tvinn.sad.manifest.list.search.label.etatdatum=Til ETA dato
 systema.tvinn.sad.manifest.list.search.label.fdatum=Fra Reg.dato
 systema.tvinn.sad.manifest.list.search.label.tdatum=Til Reg.dato
+systema.tvinn.sad.manifest.list.search.label.transpid=Bilnr/Fly
 systema.tvinn.sad.manifest.created.header.tab=Transport
 systema.tvinn.sad.manifest.createnew.last.tab=Last
 systema.tvinn.sad.manifest.created.header.logging.tab=EDI-logg
