--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -145,8 +145,11 @@ systema.tvinn.sad.import.list.search.label.digitoll.lnrt=Lnr.
 systema.tvinn.sad.import.list.search.label.digitoll.masterDocNr=M.Doc.nr
 systema.tvinn.sad.import.list.search.label.digitoll.houseTur=H.Tur
 systema.tvinn.sad.import.list.search.label.digitoll.houseOpd=H.Opd
-systema.tvinn.sad.import.list.search.label.digitoll.bilnr=Kjøretøy kj.merke
+systema.tvinn.sad.import.list.search.label.digitoll.bilnr=Bilnr
 systema.tvinn.sad.import.list.search.label.digitoll.eta=ETA
+systema.tvinn.sad.import.list.search.label.digitoll.vikt=Vekt M
+systema.tvinn.sad.import.list.search.label.digitoll.vikthouse=Vekt H
+
 
 
 #systema.tvinn.sad.import.list.search.label.begaranOmKlarering=Klarera
