--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -917,4 +917,6 @@ systema.tvinn.sad.digitoll.house.error.rule.required.deklDateSekv=Prosedyr IMMED
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.mrn=Prosedyr IMMEDIATE kan ikke inneholde MRN/LRN
 systema.tvinn.sad.digitoll.house.error.rule.invalid.email.sender=Avsender-epost er ikke gyldig
 systema.tvinn.sad.digitoll.house.error.rule.invalid.email.receiver=Mottaker-epost er ikke gyldig
+systema.tvinn.sad.digitoll.house.error.rule.required.sender.adressOrAdress2=Enten Avsender adress eller adress-2 må fylles ut
+systema.tvinn.sad.digitoll.house.error.rule.required.receiver.adressOrAdress2=Enten Mottaker adress eller adress-2 må fylles ut
 
