--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -854,6 +854,7 @@ systema.tvinn.sad.manifest.list.search.label.transportLand=Transp.land
 systema.tvinn.sad.manifest.list.search.label.transportNamn=Transp.navn
 systema.tvinn.sad.manifest.list.search.label.driver=Fører-navn
 systema.tvinn.sad.manifest.list.search.label.regDato=Reg.dato
+systema.tvinn.sad.manifest.list.search.label.typeApi=Api
 systema.tvinn.sad.manifest.list.search.label.mrn=Mrn.api
 systema.tvinn.sad.manifest.list.search.label.statusApi=Api.st
 
