--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -903,6 +903,8 @@ systema.tvinn.sad.digitoll.transport.error.rule.required.ombud.emailOrTelephone=
 systema.tvinn.sad.digitoll.transport.error.rule.invalid.email.ombud=Representant-epost er ikke gyldig
 systema.tvinn.sad.digitoll.transport.error.rule.invalid.email.carrier=Transportør-epost er ikke gyldig
 systema.tvinn.sad.digitoll.transport.error.rule.invalid.email.driver=Fører-epost er ikke gyldig
+systema.tvinn.sad.digitoll.transport.error.rule.duplicate.turnr=Turnr finnes fra før - duplikat
+systema.tvinn.sad.digitoll.transport.error.rule.invalid.zero.turnr=Turnr kan ikke vare 0
 
 #Master validator
 systema.tvinn.sad.digitoll.master.error.rule.invalid.email1.ombud=Representant-epost-1 er ikke gyldig
