--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -914,7 +914,7 @@ systema.tvinn.sad.digitoll.master.error.rule.invalid.email.sender=Avsender-epost
 systema.tvinn.sad.digitoll.master.error.rule.invalid.email.receiver=Mottaker-epost er ikke gyldig
 
 #House validator
-systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig for valgt prosedyre. Sjekk prosedyren. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering (dersom det er en LRN)
+systema.tvinn.sad.digitoll.house.error.rule.invalidReferenceType=Ref.type er ugyldig for valgt prosedyre. Sjekk prosedyren. CUDE=Tolldeklarasjon, N820=Transitteringsdeklarasjon, RETR=Oppstart transittering, GONU=Godsnummer
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.deklDateSekv=Prosedyr TRANSIT kan ikke inneholde Deklarantnr./Dato/Sekvensnr.
 systema.tvinn.sad.digitoll.house.error.rule.required.deklDateSekv=Prosedyr IMMEDIATE_RELEASE_IMPORT må inneholde Deklarantnr./Dato/Sekvensnr.
 systema.tvinn.sad.digitoll.house.error.rule.notrequired.mrn=Prosedyr IMMEDIATE kan ikke inneholde MRN/LRN
