--- a/WebContent/WEB-INF/messagestvinnsad.properties
+++ b/WebContent/WEB-INF/messagestvinnsad.properties
@@ -922,4 +922,5 @@ systema.tvinn.sad.digitoll.house.error.rule.invalid.email.sender=Avsender-epost 
 systema.tvinn.sad.digitoll.house.error.rule.invalid.email.receiver=Mottaker-epost er ikke gyldig
 systema.tvinn.sad.digitoll.house.error.rule.required.sender.adressOrAdress2=Enten Avsender adress eller adress-2 må fylles ut
 systema.tvinn.sad.digitoll.house.error.rule.required.receiver.adressOrAdress2=Enten Mottaker adress eller adress-2 må fylles ut
+systema.tvinn.sad.digitoll.house.error.rule.invalidGonuRef=GONU - Godsnummer er obligatorisk
 
